--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-session-sequelize": "^7.1.7",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.2",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1"
