--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/debug-agent": "^7.2.2",
     "@google-cloud/storage": "^6.10.1",
     "argon2": "^0.30.3",
+    "body-parser": "^1.20.2",
     "connect-session-sequelize": "^7.1.7",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "mysql2": "^3.3.2",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1"
