--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "argon2": "^0.30.3",
     "body-parser": "^1.20.2",
     "connect-session-sequelize": "^7.1.7",
+    "dateformat": "^3.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
