--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.2",
+    "nanoid": "^4.0.2",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1"
   }
