--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/debug-agent": "^7.2.2",
     "@google-cloud/storage": "^6.10.1",
+    "@tensorflow/tfjs": "^4.6.0",
     "argon2": "^0.30.3",
     "body-parser": "^1.20.2",
     "connect-session-sequelize": "^7.1.7",
